# raceengineer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
conf/: raceengineer.config  raceengineer.config.rf2
src/raceengineer/: CMakeLists.txt  metric.c  metric.h  playwav.c  playwav.h  raceengineer.c
src/raceengineer/gameloop/: CMakeLists.txt  gameloop.c  gameloop.h  metricmapper.c  metricmapper.h  singleshot.c  singleshot.h
src/raceengineer/helper/: confighelper.c  confighelper.h  parameters.c  parameters.h
src/raceengineer/simulatorapi/: CMakeLists.txt
